# diffusiontrading

./: .gitignore  COLAB_GUIDE.md  COLAB_QUICKSTART.md  README.md  app.py  colab_backtest.ipynb  generate_figures.py  generate_ieee_figures.py  generate_paper2_figures.py  generate_paper_v3_figures.py  generate_robustness_figures.py  model_validation.py  pyproject.toml  research_paper.tex  research_paper_ieee.tex  research_paper_v2.tex  update_baselines.py
.claude/: settings.local.json
config/: model_config.yaml  settings.py  strategy_config.yaml
scripts/: download_data.py  run_backtest.py  run_sensitivity.py  train_diffusion.py
src/backtesting/: diffusion_backtest.py  engine.py
src/data/: dataset.py  features.py  splits.py
src/data/preprocessors/: cleaners.py  normalizers.py
src/data/providers/: base.py  yfinance_provider.py
src/models/: conditioning.py  trainer.py
src/models/diffusion/: ddpm.py
src/models/networks/: temporal_conv.py
src/models/schedulers/: noise_schedule.py
src/sensitivity/: monte_carlo.py  parameter_sweep.py  robustness.py
src/signals/: registry.py
src/signals/technical/: indicators.py
src/strategy/: band_diffusion_strategy.py  base.py  diffusion_strategy.py
src/utils/: device.py
src/visualization/: __init__.py  charts.py
